# Grid-Mind-AI

./: .env.example  .gitignore  LICENSE  README.md  app.py  bess_optimizer.py  pyproject.toml  report_generator.py  requirements.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.streamlit/: config.toml
app/: __init__.py  chat_engine.py
app/analytics/: __init__.py  market_analytics.py
app/data/: __init__.py  market_loader.py
app/optimization/: __init__.py  bess_optimizer.py
app/reporting/: __init__.py  deterministic_report.py
app/ui/: charts.py  streamlit_app.py
backend/: __init__.py
backend/models/: __init__.py  grid.py  message.py  session.py
backend/services/: __init__.py
backend/services/data/: __init__.py  base.py  grid_repository.py
backend/utils/: __init__.py  logging.py  retry.py
config/: __init__.py  settings.py
data/: __init__.py  sample_prices.py
data_sources/: __init__.py  config.py
data_sources/cache/: __init__.py  file_cache.py
data_sources/loaders/: __init__.py  base.py  ember.py  entsoe.py  open_meteo.py  opsd.py
data_sources/parsers/: __init__.py  csv_parser.py  json_parser.py
data_sources/schemas/: __init__.py  models.py
data_sources/utils/: __init__.py  retry.py  timezone.py
docs/: architecture.md  configuration.md  installation.md  integration_review.md  markets.md  usage.md
frontend/components/: charts.py  chat.py  header.py  sidebar.py
frontend/styles/: theme.py
frontend/utils/: mock_data.py
optimization/: __init__.py  arbitrage_engine.py  charging_logic.py  cycle_simulation.py  degradation.py  revenue_metrics.py  spread_analysis.py
reports/templates/: executive_summary.md  full_report.md
screenshots/: README.md
tests/: conftest.py  test_bess_optimizer.py  test_cache.py  test_ember.py  test_market_loader.py  test_open_meteo.py  test_parsers.py  test_retry.py  test_schemas.py  test_timezone.py
(+13 files in other folders)
