[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-mind-ai"
version = "0.1.0"
description = "GridMind-AI: automated public energy dataset retrieval and normalization"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
entsoe = ["entsoe-py>=0.6.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
    "freezegun>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["data_sources*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
